# mniam-headless

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: amcom.c  amcom.h  amcom_packets.h  amcom_transactions.h  amgame.cpp  amgame.h  connection_client.cpp  connection_client.h  connection_server.cpp  connection_server.h  connection_transaction.h  food.cpp  food.h  main.cpp  player.cpp  player.h  remote_connection.cpp  remote_connection.h
src/engine/: engine.cpp  engine.hpp  world_object.hpp
